# CogStack-NiFi

./: .dockerignore  .env  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  Dockerfile_hub  Dockerfile_singleuser_gpu  IMPORTANT_NEWS.md  LICENSE  README.md  docker-compose.override.yaml  docker-compose.yaml  docker-compose.yaml-all  news.md  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml  docker-image.yml
config/: jupyter_notebook_config.py  jupyterhub_config.py
data/: .gitignore
deploy/: .env  .env-example  Makefile  README.md  SERVICES.md  WORKFLOWS.md  database.env  elasticsearch.env  export_env_vars.sh  general.env  gitea.env  jupyter.env  network_settings.env  nginx.env  nifi.env  nlp_service.env  ocr_service.env  ocr_service_text_only.env  project.env  services-dev.yml  services.dev.yml  services.yml  start_basic_example.sh  telemetry.env
docker/: docker-compose-dev.yml  docker-compose.yml
docs/: .markdownlint.yaml  conf.py  index.rst  main.md  news.md  nifi-tls-setup.md  nifi.md  requirements.txt  security.md  services.md
env/: general.env
nifi/: .gitignore  Dockerfile  README.md  fix_nifi_registry_perms.sh  recreate_nifi_docker_image.sh  requirements-dev.txt  requirements.txt
notebooks/: query-annotations-opensearch.ipynb
scripts/: authorize_ssh_with_gitea.sh  convert_submodules_to_gitea.sh  generate_cookie_secret.sh  git_freeze_security.sh  git_unfreeze_security.sh  git_update_submodules_in_repo.sh  gitea_authorize_with_ssh.sh  gitea_convert_submodules.sh  gitea_create_submodule_repos.sh  push_submodules_to_gitea.sh  (+6 more)
(+825 files in other folders)
