[tool.ruff]
line-length = 120
exclude = ["nifi/user-scripts/legacy_scripts", "services"]
target-version = "py311"
indent-width = 4

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

fixable = ["ALL"]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.11"
ignore_missing_imports = true
strict = false
files = "."
mypy_path = "./typings/"
warn_unused_configs = true

[tool.setuptools.packages.find]
include = ["nifi*"]
exclude = [
    "*egg-info*",
    "build*",
    "dist*",
    "nifi/conf*",
    "nifi/drivers*",
    "nifi/user_schemas*",
    "nifi/user_templates*",
]

[project]
name = "cogstack_nifi"
version = "0.1.0"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
